tests/baselines/reference/enumTag(strict=true).errors.txt
a.js(6,5): error TS2322: Type 'number' is not assignable to type 'string'.
a.js(12,5): error TS2322: Type 'string' is not assignable to type 'number'.
a.js(19,11): error TS7006: Parameter 'n' implicitly has an 'any' type.
a.js(20,9): error TS7006: Parameter 'n' implicitly has an 'any' type.
a.js(21,11): error TS7006: Parameter 'n' implicitly has an 'any' type.
a.js(37,16): error TS2339: Property 'UNKNOWN' does not exist on type '{ START: string; MIDDLE: string; END: string; MISTAKE: number; OK_I_GUESS: number; }'.
a.js(44,10): error TS7053: Element implicitly has an 'any' type because expression of type 'string' can't be used to index type '{ START: string; MIDDLE: string; END: string; MISTAKE: number; OK_I_GUESS: number; }'.
  No index signature with a parameter of type 'string' was found on type '{ START: string; MIDDLE: string; END: string; MISTAKE: number; OK_I_GUESS: number; }'.
a.js(48,16): error TS7053: Element implicitly has an 'any' type because expression of type 'string' can't be used to index type '{ START: string; MIDDLE: string; END: string; MISTAKE: number; OK_I_GUESS: number; }'.
  No index signature with a parameter of type 'string' was found on type '{ START: string; MIDDLE: string; END: string; MISTAKE: number; OK_I_GUESS: number; }'.


==== a.js (8 errors) ====
    /** @enum {string} */
    const Target = {
        START: "start",
        MIDDLE: "middle",
        END: "end",
        MISTAKE: 1,
        ~~~~~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
        /** @type {number} */
        OK_I_GUESS: 2
    }
    /** @enum number */
    const Second = {
        MISTAKE: "end",
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
        OK: 1,
        /** @type {number} */
        FINE: 2,
    }
    /** @enum {function(number): number} */
    const Fs = {
        ADD1: n => n + 1,
              ~
!!! error TS7006: Parameter 'n' implicitly has an 'any' type.
        ID: n => n,
            ~
!!! error TS7006: Parameter 'n' implicitly has an 'any' type.
        SUB1: n => n - 1
              ~
!!! error TS7006: Parameter 'n' implicitly has an 'any' type.
    }
    
    /** @param {Target} t
     * @param {Second} s
     * @param {Fs} f
     */
    function consume(t,s,f) {
        /** @type {string} */
        var str = t
        /** @type {number} */
        var num = s
        /** @type {(n: number) => number} */
        var fun = f
        /** @type {Target} */
        var v = Target.START
        v = Target.UNKNOWN // error, can't find 'UNKNOWN'
                   ~~~~~~~
!!! error TS2339: Property 'UNKNOWN' does not exist on type '{ START: string; MIDDLE: string; END: string; MISTAKE: number; OK_I_GUESS: number; }'.
        v = Second.MISTAKE // meh..ok, I guess?
        v = 'something else' // allowed, like Typescript's classic enums and unlike its string enums
    }
    /** @param {string} s */
    function ff(s) {
        // element access with arbitrary string is an error only with noImplicitAny
        if (!Target[s]) {
             ~~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type 'string' can't be used to index type '{ START: string; MIDDLE: string; END: string; MISTAKE: number; OK_I_GUESS: number; }'.
!!! error TS7053:   No index signature with a parameter of type 'string' was found on type '{ START: string; MIDDLE: string; END: string; MISTAKE: number; OK_I_GUESS: number; }'.
            return null
        }
        else {
            return Target[s]
                   ~~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type 'string' can't be used to index type '{ START: string; MIDDLE: string; END: string; MISTAKE: number; OK_I_GUESS: number; }'.
!!! error TS7053:   No index signature with a parameter of type 'string' was found on type '{ START: string; MIDDLE: string; END: string; MISTAKE: number; OK_I_GUESS: number; }'.
        }
    }
    
    
    